--- a/LI2/latex/logica_8h.tex
+++ b/LI2/latex/logica_8h.tex
@@ -297,7 +297,7 @@ Extrai o algarismo que é introduzido após o comando \char`\"{}pos\char`\"{} (\
 
 
 \begin{quote}
-Verifica que o comando \char`\"{}pos\char`\"{} apenas está a ser introduzido a uma jogada anterior e não à jogada anterior. \end{quote}
+Verifica que o comando \char`\"{}pos\char`\"{} apenas está a ser introduzido a uma jogada anterior e não à jogada atual. \end{quote}
 
 
 Definido na linha 147 do ficheiro logica.\+c.
