--- a/LI2/latex/struct_e_s_t_a_d_o.tex
+++ b/LI2/latex/struct_e_s_t_a_d_o.tex
@@ -26,6 +26,9 @@ int {\bfseries num\+\_\+jogadas}
 \item 
 \mbox{\Hypertarget{struct_e_s_t_a_d_o_a5dd28e2e68b7aef2b6b7ea88e02eff58}\label{struct_e_s_t_a_d_o_a5dd28e2e68b7aef2b6b7ea88e02eff58}} 
 int {\bfseries jogador\+\_\+atual}
+\item 
+\mbox{\Hypertarget{struct_e_s_t_a_d_o_a1467e6f5f5f389a107fda06ba9d3627b}\label{struct_e_s_t_a_d_o_a1467e6f5f5f389a107fda06ba9d3627b}} 
+int {\bfseries max\+\_\+num\+\_\+jogadas}
 \end{DoxyCompactItemize}
 
 
