--- a/LI2/latex/logica_8h.tex
+++ b/LI2/latex/logica_8h.tex
@@ -76,9 +76,14 @@ Definido na linha 29 do ficheiro logica.\+c.
 \DoxyCodeLine{41         e-\/>jogador\_atual = 2;}
 \DoxyCodeLine{42     \textcolor{keywordflow}{else} \{}
 \DoxyCodeLine{43         e-\/>jogador\_atual = 1;}
-\DoxyCodeLine{45         e-\/>num\_jogadas++;}
-\DoxyCodeLine{46     \}}
-\DoxyCodeLine{47 \}}
+\DoxyCodeLine{45         \textcolor{keywordflow}{if} (e-\/>num\_jogadas >= e-\/>max\_num\_jogadas) \{}
+\DoxyCodeLine{46             e-\/>num\_jogadas++;}
+\DoxyCodeLine{47             e-\/>max\_num\_jogadas++;}
+\DoxyCodeLine{48         \}}
+\DoxyCodeLine{49         \textcolor{keywordflow}{else}}
+\DoxyCodeLine{50             e-\/>num\_jogadas++;}
+\DoxyCodeLine{51     \}}
+\DoxyCodeLine{52 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}\label{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}} 
@@ -103,19 +108,19 @@ Função que verifica se a jogada é possivel.
 \end{DoxyReturn}
 
 
-Definido na linha 50 do ficheiro logica.\+c.
+Definido na linha 55 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{50                                               \{}
-\DoxyCodeLine{51     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
-\DoxyCodeLine{52     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
-\DoxyCodeLine{53     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
-\DoxyCodeLine{54 }
-\DoxyCodeLine{55         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{56     \}}
-\DoxyCodeLine{57     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{58 \}}
+\DoxyCodeLine{55                                               \{}
+\DoxyCodeLine{56     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
+\DoxyCodeLine{57     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
+\DoxyCodeLine{58     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
+\DoxyCodeLine{59 }
+\DoxyCodeLine{60         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{61     \}}
+\DoxyCodeLine{62     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{63 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}\label{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}} 
@@ -190,22 +195,22 @@ Verifica se o jogo terminou.
 \end{DoxyReturn}
 
 
-Definido na linha 61 do ficheiro logica.\+c.
+Definido na linha 66 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{61                                \{}
-\DoxyCodeLine{62     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{63     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
-\DoxyCodeLine{64         r = 1;}
-\DoxyCodeLine{65     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
-\DoxyCodeLine{66             r = 2;}
-\DoxyCodeLine{67     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 32)}
-\DoxyCodeLine{68                 r = 3;}
-\DoxyCodeLine{69     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{70         r = 0;}
-\DoxyCodeLine{71     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{72 \}}
+\DoxyCodeLine{66                                \{}
+\DoxyCodeLine{67     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{68     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
+\DoxyCodeLine{69         r = 1;}
+\DoxyCodeLine{70     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
+\DoxyCodeLine{71             r = 2;}
+\DoxyCodeLine{72     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 31)}
+\DoxyCodeLine{73                 r = 3;}
+\DoxyCodeLine{74     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{75         r = 0;}
+\DoxyCodeLine{76     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{77 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}\label{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}} 
@@ -240,36 +245,37 @@ Abre o ficheiro pedido pelo utilizador e lê o seu conteúdo. \end{quote}
 Ao ler o ficheiro, quando chega ao local onde se encontram as jogadas anteriores, chama a função \char`\"{}update\+\_\+array\+\_\+jogadas()\char`\"{}. \end{quote}
 
 
-Definido na linha 91 do ficheiro logica.\+c.
+Definido na linha 96 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{91                                             \{}
-\DoxyCodeLine{92 }
-\DoxyCodeLine{93     FILE *fp;}
-\DoxyCodeLine{94     \textcolor{keywordtype}{char} lin\_fich [BUF\_SIZE], *comando;}
-\DoxyCodeLine{95     \textcolor{keywordtype}{int} k = 0;}
-\DoxyCodeLine{96     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{98     strtok(linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{99     comando = strtok (NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{100     strcat(comando, \textcolor{stringliteral}{".txt"});}
-\DoxyCodeLine{102     \textcolor{comment}{//A função "access" retorna -\/1 caso nao encontre o ficheiro.}}
-\DoxyCodeLine{103     \textcolor{keywordflow}{if} (access(comando, F\_OK) != -\/1) \{}
-\DoxyCodeLine{104         \mbox{\hyperlink{dados_8h_a543f64d33cbc5f4c00ad7dc4e60d2105}{reinit}}(e);}
-\DoxyCodeLine{105         fp = fopen(comando, \textcolor{stringliteral}{"r"});}
-\DoxyCodeLine{106         \textcolor{keywordflow}{while} (fgets(lin\_fich, BUF\_SIZE, fp) != NULL) \{}
-\DoxyCodeLine{108             \textcolor{keywordflow}{if} (k >= 9) \{}
-\DoxyCodeLine{109                 \mbox{\hyperlink{dados_8h_abadfdc02ae37afa3fc371a15c0090e61}{ler\_tab}}(e, lin\_fich);}
-\DoxyCodeLine{110             \}}
-\DoxyCodeLine{111             k++;}
-\DoxyCodeLine{112         \}}
-\DoxyCodeLine{113         fclose(fp);}
-\DoxyCodeLine{114         r = 1;}
-\DoxyCodeLine{115     \}}
-\DoxyCodeLine{116     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{117         r = 0;}
-\DoxyCodeLine{118     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{119 \}}
+\DoxyCodeLine{96                                             \{}
+\DoxyCodeLine{97 }
+\DoxyCodeLine{98     FILE *fp;}
+\DoxyCodeLine{99     \textcolor{keywordtype}{char} lin\_fich [BUF\_SIZE], *comando;}
+\DoxyCodeLine{100     \textcolor{keywordtype}{int} k = 0;}
+\DoxyCodeLine{101     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{103     strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{104     comando = strtok (NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{105     strcat(comando, \textcolor{stringliteral}{".txt"});}
+\DoxyCodeLine{107     \textcolor{comment}{//A função "access" retorna -\/1 caso nao encontre o ficheiro.}}
+\DoxyCodeLine{108     \textcolor{keywordflow}{if} (access(comando, F\_OK) != -\/1) \{}
+\DoxyCodeLine{109         \mbox{\hyperlink{dados_8h_a543f64d33cbc5f4c00ad7dc4e60d2105}{reinit}}(e);}
+\DoxyCodeLine{110         e-\/>max\_num\_jogadas = 0;}
+\DoxyCodeLine{111         fp = fopen(comando, \textcolor{stringliteral}{"r"});}
+\DoxyCodeLine{112         \textcolor{keywordflow}{while} (fgets(lin\_fich, BUF\_SIZE, fp) != NULL) \{}
+\DoxyCodeLine{114             \textcolor{keywordflow}{if} (k >= 9) \{}
+\DoxyCodeLine{115                 \mbox{\hyperlink{dados_8h_abadfdc02ae37afa3fc371a15c0090e61}{ler\_tab}}(e, lin\_fich);}
+\DoxyCodeLine{116             \}}
+\DoxyCodeLine{117             k++;}
+\DoxyCodeLine{118         \}}
+\DoxyCodeLine{119         fclose(fp);}
+\DoxyCodeLine{120         r = 1;}
+\DoxyCodeLine{121     \}}
+\DoxyCodeLine{122     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{123         r = 0;}
+\DoxyCodeLine{124     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{125 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_aec4a963a88af44348027ec7cf17ff47a}\label{logica_8h_aec4a963a88af44348027ec7cf17ff47a}} 
@@ -300,23 +306,23 @@ Extrai o algarismo que é introduzido após o comando \char`\"{}pos\char`\"{} (\
 Verifica que o comando \char`\"{}pos\char`\"{} apenas está a ser introduzido a uma jogada anterior e não à jogada atual. \end{quote}
 
 
-Definido na linha 147 do ficheiro logica.\+c.
+Definido na linha 153 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{147                                  \{}
-\DoxyCodeLine{148     \textcolor{keywordtype}{char} *comando, *end;}
-\DoxyCodeLine{149     \textcolor{keywordtype}{int} r, max = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{150     strtok (linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{151     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{153     r = strtol (comando, \&end, 10);}
-\DoxyCodeLine{155     \textcolor{keywordflow}{if} (r < max + 1) \{}
-\DoxyCodeLine{156         \mbox{\hyperlink{dados_8h_a72bd3fb56f0ac3af60c392b49f76a329}{pos\_helper}}(e, r);}
-\DoxyCodeLine{157         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{158     \}}
-\DoxyCodeLine{159     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{160         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{161 \}}
+\DoxyCodeLine{153                                  \{}
+\DoxyCodeLine{154     \textcolor{keywordtype}{char} *comando, *end;}
+\DoxyCodeLine{155     \textcolor{keywordtype}{int} r, max = \mbox{\hyperlink{dados_8h_a9f2d95954ffa63c2f456e9481a883071}{obter\_max\_num\_jog}}(e);}
+\DoxyCodeLine{156     strtok (linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{157     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{159     r = strtol (comando, \&end, 10);}
+\DoxyCodeLine{161     \textcolor{keywordflow}{if} (r < max + 1) \{}
+\DoxyCodeLine{162         \mbox{\hyperlink{dados_8h_a72bd3fb56f0ac3af60c392b49f76a329}{pos\_helper}}(e, r);}
+\DoxyCodeLine{163         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{164     \}}
+\DoxyCodeLine{165     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{166         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{167 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a00a35418e9e9a6c215b653dceb822a03}\label{logica_8h_a00a35418e9e9a6c215b653dceb822a03}} 
@@ -339,21 +345,21 @@ Uma posição para a coluna do tabuleiro.
 \end{DoxyReturn}
 
 
-Definido na linha 135 do ficheiro logica.\+c.
+Definido na linha 141 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{135                                \{}
-\DoxyCodeLine{136     \textcolor{keywordtype}{int} cord;}
-\DoxyCodeLine{137     \textcolor{comment}{//Quando a função isalpha() retornar algum valor diferente de 0, converte-\/o num int e devolve-\/o.f}}
-\DoxyCodeLine{138     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
-\DoxyCodeLine{139         \textcolor{keywordflow}{if} (isalpha(str[i]) != 0) \{}
-\DoxyCodeLine{140             cord = str[i] -\/ \textcolor{charliteral}{'a'};}
-\DoxyCodeLine{141             \textcolor{keywordflow}{return} cord;}
-\DoxyCodeLine{142         \}}
-\DoxyCodeLine{143     \}}
-\DoxyCodeLine{144     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{145 \}}
+\DoxyCodeLine{141                                \{}
+\DoxyCodeLine{142     \textcolor{keywordtype}{int} cord;}
+\DoxyCodeLine{143     \textcolor{comment}{//Quando a função isalpha() retornar algum valor diferente de 0, converte-\/o num int e devolve-\/o.f}}
+\DoxyCodeLine{144     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
+\DoxyCodeLine{145         \textcolor{keywordflow}{if} (isalpha(str[i]) != 0) \{}
+\DoxyCodeLine{146             cord = str[i] -\/ \textcolor{charliteral}{'a'};}
+\DoxyCodeLine{147             \textcolor{keywordflow}{return} cord;}
+\DoxyCodeLine{148         \}}
+\DoxyCodeLine{149     \}}
+\DoxyCodeLine{150     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{151 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a224bb3db996c2f3baca3a72b8509c3ce}\label{logica_8h_a224bb3db996c2f3baca3a72b8509c3ce}} 
@@ -376,23 +382,23 @@ Uma posição para a linha do tabuleiro.
 \end{DoxyReturn}
 
 
-Definido na linha 121 do ficheiro logica.\+c.
+Definido na linha 127 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{121                               \{}
-\DoxyCodeLine{122     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{123     \textcolor{keywordtype}{char} *end;}
-\DoxyCodeLine{124     \textcolor{comment}{//Quando enconrtar algum elemento da string para a qual a funcao isdigit() devolva algum valor diferente de 0, converte-\/o num int e devolve-\/o.}}
-\DoxyCodeLine{125     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
-\DoxyCodeLine{126         \textcolor{keywordflow}{if} (isdigit(str[i]) != 0) \{}
-\DoxyCodeLine{127            r = strtol(\&str[i], \&end, 10);}
-\DoxyCodeLine{128            r = abs(r-\/8);}
-\DoxyCodeLine{129            \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{130         \}}
-\DoxyCodeLine{131     \}}
-\DoxyCodeLine{132     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{133 \}}
+\DoxyCodeLine{127                               \{}
+\DoxyCodeLine{128     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{129     \textcolor{keywordtype}{char} *end;}
+\DoxyCodeLine{130     \textcolor{comment}{//Quando enconrtar algum elemento da string para a qual a funcao isdigit() devolva algum valor diferente de 0, converte-\/o num int e devolve-\/o.}}
+\DoxyCodeLine{131     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
+\DoxyCodeLine{132         \textcolor{keywordflow}{if} (isdigit(str[i]) != 0) \{}
+\DoxyCodeLine{133            r = strtol(\&str[i], \&end, 10);}
+\DoxyCodeLine{134            r = abs(r-\/8);}
+\DoxyCodeLine{135            \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{136         \}}
+\DoxyCodeLine{137     \}}
+\DoxyCodeLine{138     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{139 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}\label{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}} 
@@ -420,22 +426,22 @@ Copia o nome do ficheiro presente na string \char`\"{}linha\char`\"{} e coloca n
 Cria o ficheiro com o nome pedido pelo utilizador, ou abre-\/o, caso este ja exista. \end{quote}
 
 
-Definido na linha 75 do ficheiro logica.\+c.
+Definido na linha 80 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{75                                                 \{}
-\DoxyCodeLine{76     \textcolor{keywordtype}{char} *comando;}
-\DoxyCodeLine{78     strtok(linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{79     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{80     strcat(comando, \textcolor{stringliteral}{".txt"});}
-\DoxyCodeLine{81 }
-\DoxyCodeLine{83     FILE *fp;}
-\DoxyCodeLine{84     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
-\DoxyCodeLine{85     \mbox{\hyperlink{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
-\DoxyCodeLine{86     \mbox{\hyperlink{interface_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
-\DoxyCodeLine{87     fclose(fp);}
-\DoxyCodeLine{88 \}}
+\DoxyCodeLine{80                                                 \{}
+\DoxyCodeLine{81     \textcolor{keywordtype}{char} *comando;}
+\DoxyCodeLine{83     strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{84     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{85     strcat(comando, \textcolor{stringliteral}{".txt"});}
+\DoxyCodeLine{86 }
+\DoxyCodeLine{88     FILE *fp;}
+\DoxyCodeLine{89     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
+\DoxyCodeLine{90     \mbox{\hyperlink{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
+\DoxyCodeLine{91     \mbox{\hyperlink{interface_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
+\DoxyCodeLine{92     fclose(fp);}
+\DoxyCodeLine{93 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a608d40c8b37424e7bd4e5ee3f0fe8b97}\label{logica_8h_a608d40c8b37424e7bd4e5ee3f0fe8b97}} 
