--- a/LI2/latex/interface_8h.tex
+++ b/LI2/latex/interface_8h.tex
@@ -7,6 +7,8 @@
 \item 
 void \mbox{\hyperlink{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}{mostrar\+\_\+tabuleiro}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e)
 \begin{DoxyCompactList}\small\item\em Imprime o tabuleiro. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\+\_\+tabuleiro\+\_\+final}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e)
+\begin{DoxyCompactList}\small\item\em Imprime o tabuleiro sem o prompt. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{interface_8h_a24da95ebeede4a540e37790ce8be359b}{interpretador}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e)
 \begin{DoxyCompactList}\small\item\em Interpretador do jogo, todos os comandos sao efetuados nesta função. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\+\_\+file\+Tab}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, F\+I\+LE $\ast$fp)
@@ -42,40 +44,40 @@ Função que imprime as jogadas anteriores no ficheiro criado pelo utilizador co
 Coloca jogadas anteriores no ficheiro. \end{quote}
 
 
-Definido na linha 106 do ficheiro interface.\+c.
+Definido na linha 138 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{106                                        \{}
-\DoxyCodeLine{107     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{108     \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{110     \textcolor{keywordflow}{if} (jog == 2) \{}
-\DoxyCodeLine{111         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
-\DoxyCodeLine{112             \textcolor{keywordflow}{if}(i < 9)}
-\DoxyCodeLine{113                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
-\DoxyCodeLine{114             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{115                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
-\DoxyCodeLine{116             \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
-\DoxyCodeLine{117                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{118                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{119             \}}
-\DoxyCodeLine{120             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{121                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
-\DoxyCodeLine{122             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{123         \}}
-\DoxyCodeLine{124     \}}
-\DoxyCodeLine{125     \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{126         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
-\DoxyCodeLine{127             \textcolor{keywordflow}{if} (i < 10)}
-\DoxyCodeLine{128                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
-\DoxyCodeLine{129             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{130                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
-\DoxyCodeLine{131             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{132                     \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{133             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{134         \}}
-\DoxyCodeLine{135     \}}
-\DoxyCodeLine{136 \}}
+\DoxyCodeLine{138                                        \{}
+\DoxyCodeLine{139     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{140     \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{142     \textcolor{keywordflow}{if} (jog == 2) \{}
+\DoxyCodeLine{143         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
+\DoxyCodeLine{144             \textcolor{keywordflow}{if}(i < 9)}
+\DoxyCodeLine{145                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
+\DoxyCodeLine{146             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{147                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
+\DoxyCodeLine{148             \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
+\DoxyCodeLine{149                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{150                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{151             \}}
+\DoxyCodeLine{152             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{153                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
+\DoxyCodeLine{154             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{155         \}}
+\DoxyCodeLine{156     \}}
+\DoxyCodeLine{157     \textcolor{keywordflow}{if} (jog == 1) \{}
+\DoxyCodeLine{158         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
+\DoxyCodeLine{159             \textcolor{keywordflow}{if} (i < 10)}
+\DoxyCodeLine{160                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
+\DoxyCodeLine{161             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{162                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
+\DoxyCodeLine{163             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{164                     \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{165             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{166         \}}
+\DoxyCodeLine{167     \}}
+\DoxyCodeLine{168 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}\label{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}} 
@@ -99,20 +101,20 @@ Função que imprime o tabuleiro no ficheiro criado pelo utilizador com o comand
 Imprime o conteudo do tabuleiro, imprimindo \textquotesingle{}$\ast$\textquotesingle{} no caso de a Peça ser \char`\"{}\+B\+R\+A\+N\+C\+A\char`\"{},\textquotesingle{}\#\textquotesingle{} no caso de a peça ser \char`\"{}\+P\+R\+E\+T\+A\char`\"{}, e \textquotesingle{}.\textquotesingle{} no caso de ser \char`\"{}\+V\+A\+Z\+I\+O\char`\"{}. \end{quote}
 
 
-Definido na linha 93 do ficheiro interface.\+c.
+Definido na linha 125 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{93                                            \{}
-\DoxyCodeLine{95     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
-\DoxyCodeLine{96         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
-\DoxyCodeLine{97             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
-\DoxyCodeLine{98             fprintf(fp, \textcolor{stringliteral}{"\%c"}, peca);}
-\DoxyCodeLine{99         \}}
-\DoxyCodeLine{100         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{101     \}}
-\DoxyCodeLine{102     fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{103 \}}
+\DoxyCodeLine{125                                            \{}
+\DoxyCodeLine{127     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
+\DoxyCodeLine{128         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
+\DoxyCodeLine{129             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
+\DoxyCodeLine{130             fprintf(fp, \textcolor{stringliteral}{"\%c"}, peca);}
+\DoxyCodeLine{131         \}}
+\DoxyCodeLine{132         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{133     \}}
+\DoxyCodeLine{134     fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{135 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_a24da95ebeede4a540e37790ce8be359b}\label{interface_8h_a24da95ebeede4a540e37790ce8be359b}} 
@@ -141,67 +143,77 @@ Usa a funcao \char`\"{}jogo\+\_\+terminado\char`\"{} para verificar se tem de co
 Verifica qual é o comando do utilizador, tendo ações diferentes para cada um destes comandos. \end{quote}
 
 
-Definido na linha 32 do ficheiro interface.\+c.
+Definido na linha 54 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{32                              \{}
-\DoxyCodeLine{33     \textcolor{keywordtype}{char} linha[BUF\_SIZE];}
-\DoxyCodeLine{34     \textcolor{keywordtype}{char} col[2], lin[2];}
-\DoxyCodeLine{35 }
-\DoxyCodeLine{37     \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 0) \{}
-\DoxyCodeLine{38         \mbox{\hyperlink{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}{mostrar\_tabuleiro}}(e);}
-\DoxyCodeLine{40         \textcolor{keywordflow}{if} (fgets(linha, BUF\_SIZE, stdin) == NULL)}
-\DoxyCodeLine{41             \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{42         \textcolor{keywordflow}{else}}
-\DoxyCodeLine{43             \textcolor{comment}{//Comando "Q", para sair do jogo.}}
-\DoxyCodeLine{44             \textcolor{keywordflow}{if} (strlen(linha) == 2 \&\& strncmp(linha, \textcolor{stringliteral}{"Q"}, 1) == 0) \{}
-\DoxyCodeLine{45                 printf(\textcolor{stringliteral}{"Saiu do jogo. \(\backslash\)n"});}
-\DoxyCodeLine{46                 \textcolor{keywordflow}{break};}
-\DoxyCodeLine{47             \}}
-\DoxyCodeLine{48             \textcolor{comment}{//Comando "gr", para guardar o estado do jogo.}}
-\DoxyCodeLine{49             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"gr"}, 2) == 0) \{}
-\DoxyCodeLine{50                 \mbox{\hyperlink{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}{tabuleiro\_ficheiro}}(e, linha);}
-\DoxyCodeLine{51                 printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo gravado.\(\backslash\)n"});}
-\DoxyCodeLine{52             \}}
-\DoxyCodeLine{53             \textcolor{comment}{//Comando "ler" para ler o estado do jogo num dado ficheiro.}}
-\DoxyCodeLine{54             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"ler"}, 3) == 0) \{}
-\DoxyCodeLine{55                \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}{ler\_ficheiro}}(e,linha) == 1) \{}
-\DoxyCodeLine{56                     printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo atualizado.\(\backslash\)n"});}
-\DoxyCodeLine{57                 \}}
-\DoxyCodeLine{58                \textcolor{keywordflow}{else}}
-\DoxyCodeLine{59                    printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Nao foi possivel encontrar esse ficheiro.\(\backslash\)n"});}
-\DoxyCodeLine{60             \}}
-\DoxyCodeLine{61             \textcolor{comment}{//Comando "movs" que mostra todas as jogadas efetuadas até ao momento da execução do comando.}}
-\DoxyCodeLine{62             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"movs"}, 4) == 0) \{}
-\DoxyCodeLine{63                 printf(\textcolor{stringliteral}{"\#=> Movimentos do jogo:\(\backslash\)n"});}
-\DoxyCodeLine{64                 \mbox{\hyperlink{interface_8h_a8d63019a8176de612e33bf8c72121760}{movs}}(e);}
-\DoxyCodeLine{65             \}}
-\DoxyCodeLine{66             \textcolor{comment}{//Comando "pos", que permite ao jogador voltar atras para uma jogada à sua escolha.}}
-\DoxyCodeLine{67             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"pos"}, 3) == 0) \{}
-\DoxyCodeLine{68                 \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aec4a963a88af44348027ec7cf17ff47a}{pos}}(e,linha) == 1)}
-\DoxyCodeLine{69                     printf (\textcolor{stringliteral}{"\#=> Posição atualizada.\(\backslash\)n"});}
-\DoxyCodeLine{70                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{71                     printf(\textcolor{stringliteral}{"A posição escolhida nao e valida!\(\backslash\)n"});}
-\DoxyCodeLine{72             \}}
-\DoxyCodeLine{73             \textcolor{comment}{//Caso nao se pretenda efetuar nenhum comando mas sim uma jogada.}}
-\DoxyCodeLine{74         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
-\DoxyCodeLine{75             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
-\DoxyCodeLine{76             \textcolor{comment}{//Caso seja feita uma jogada, colocamos o valor máximo do comando pos = ao valor da jogada atual.}}
-\DoxyCodeLine{77             \mbox{\hyperlink{dados_8h_ae46fb285155bff2316804318ef6f0fc6}{set\_max}}(e);}
-\DoxyCodeLine{78             \textcolor{keywordflow}{if}(\mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e,coord) == 0)}
-\DoxyCodeLine{79                 printf(\textcolor{stringliteral}{"Jogada Invalida. \(\backslash\)n"});}
-\DoxyCodeLine{80         \}}
-\DoxyCodeLine{81     \}}
-\DoxyCodeLine{82     \textcolor{comment}{//Verifica qual dos jogadores congratular no final do jogo.}}
-\DoxyCodeLine{83     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1)}
-\DoxyCodeLine{84         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
-\DoxyCodeLine{85     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2)}
-\DoxyCodeLine{86         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
-\DoxyCodeLine{87     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3)}
-\DoxyCodeLine{88         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
-\DoxyCodeLine{89     \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{90 \}}
+\DoxyCodeLine{54                              \{}
+\DoxyCodeLine{55     \textcolor{keywordtype}{char} linha[BUF\_SIZE];}
+\DoxyCodeLine{56     \textcolor{keywordtype}{char} col[2], lin[2];}
+\DoxyCodeLine{57 }
+\DoxyCodeLine{59     \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 0) \{}
+\DoxyCodeLine{60         \mbox{\hyperlink{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}{mostrar\_tabuleiro}}(e);}
+\DoxyCodeLine{62         \textcolor{keywordflow}{if} (fgets(linha, BUF\_SIZE, stdin) == NULL)}
+\DoxyCodeLine{63             \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{64         \textcolor{keywordflow}{else}}
+\DoxyCodeLine{65             \textcolor{comment}{//Comando "Q", para sair do jogo.}}
+\DoxyCodeLine{66             \textcolor{keywordflow}{if} (strlen(linha) == 2 \&\& strncmp(linha, \textcolor{stringliteral}{"Q"}, 1) == 0) \{}
+\DoxyCodeLine{67                 printf(\textcolor{stringliteral}{"Saiu do jogo. \(\backslash\)n"});}
+\DoxyCodeLine{68                 \textcolor{keywordflow}{break};}
+\DoxyCodeLine{69             \}}
+\DoxyCodeLine{70             \textcolor{comment}{//Comando "gr", para guardar o estado do jogo.}}
+\DoxyCodeLine{71             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"gr"}, 2) == 0) \{}
+\DoxyCodeLine{72                 \mbox{\hyperlink{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}{tabuleiro\_ficheiro}}(e, linha);}
+\DoxyCodeLine{73                 printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo gravado.\(\backslash\)n"});}
+\DoxyCodeLine{74             \}}
+\DoxyCodeLine{75             \textcolor{comment}{//Comando "ler" para ler o estado do jogo num dado ficheiro.}}
+\DoxyCodeLine{76             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"ler"}, 3) == 0) \{}
+\DoxyCodeLine{77                \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}{ler\_ficheiro}}(e,linha) == 1) \{}
+\DoxyCodeLine{78                     printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Estado do jogo atualizado.\(\backslash\)n"});}
+\DoxyCodeLine{79                 \}}
+\DoxyCodeLine{80                \textcolor{keywordflow}{else}}
+\DoxyCodeLine{81                    printf(\textcolor{stringliteral}{"\(\backslash\)n\#=> Nao foi possivel encontrar esse ficheiro.\(\backslash\)n"});}
+\DoxyCodeLine{82             \}}
+\DoxyCodeLine{83             \textcolor{comment}{//Comando "movs" que mostra todas as jogadas efetuadas até ao momento da execução do comando.}}
+\DoxyCodeLine{84             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"movs"}, 4) == 0) \{}
+\DoxyCodeLine{85                 printf(\textcolor{stringliteral}{"\#=> Movimentos do jogo:\(\backslash\)n"});}
+\DoxyCodeLine{86                 \mbox{\hyperlink{interface_8h_a8d63019a8176de612e33bf8c72121760}{movs}}(e);}
+\DoxyCodeLine{87             \}}
+\DoxyCodeLine{88             \textcolor{comment}{//Comando "pos", que permite ao jogador voltar atras para uma jogada à sua escolha.}}
+\DoxyCodeLine{89             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"pos"}, 3) == 0) \{}
+\DoxyCodeLine{90                 \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aec4a963a88af44348027ec7cf17ff47a}{pos}}(e,linha) == 1)}
+\DoxyCodeLine{91                     printf (\textcolor{stringliteral}{"\#=> Posição atualizada.\(\backslash\)n"});}
+\DoxyCodeLine{92                 \textcolor{keywordflow}{else}}
+\DoxyCodeLine{93                     printf(\textcolor{stringliteral}{"A posição escolhida nao e valida!\(\backslash\)n"});}
+\DoxyCodeLine{94             \}}
+\DoxyCodeLine{95             \textcolor{comment}{//Caso nao se pretenda efetuar nenhum comando mas sim uma jogada.}}
+\DoxyCodeLine{96         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
+\DoxyCodeLine{97             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
+\DoxyCodeLine{98             \textcolor{comment}{//Caso seja feita uma jogada, colocamos o valor máximo do comando pos = ao valor da jogada atual.}}
+\DoxyCodeLine{99             \mbox{\hyperlink{dados_8h_ae46fb285155bff2316804318ef6f0fc6}{set\_max}}(e);}
+\DoxyCodeLine{100             \textcolor{keywordflow}{if}(\mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e,coord) == 0)}
+\DoxyCodeLine{101                 printf(\textcolor{stringliteral}{"Jogada Invalida. \(\backslash\)n"});}
+\DoxyCodeLine{102         \}}
+\DoxyCodeLine{103     \}}
+\DoxyCodeLine{104     \textcolor{comment}{//Verifica qual dos jogadores congratular no final do jogo.}}
+\DoxyCodeLine{105     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1) \{}
+\DoxyCodeLine{106         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{107         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
+\DoxyCodeLine{108     \}}
+\DoxyCodeLine{109     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2) \{}
+\DoxyCodeLine{110         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{111         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
+\DoxyCodeLine{112     \}}
+\DoxyCodeLine{113     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3) \{}
+\DoxyCodeLine{114         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{115         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
+\DoxyCodeLine{116     \}}
+\DoxyCodeLine{117     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 4) \{}
+\DoxyCodeLine{118         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{119         printf(\textcolor{stringliteral}{"A peca ficou encurralada, e um empate!\(\backslash\)n"});}
+\DoxyCodeLine{120     \}}
+\DoxyCodeLine{121     \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{122 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}\label{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}} 
@@ -250,6 +262,51 @@ Definido na linha 7 do ficheiro interface.\+c.
 \DoxyCodeLine{29 \}}
 
 \end{DoxyCode}
+\mbox{\Hypertarget{interface_8h_a14932179629d49fade0db78a3136d787}\label{interface_8h_a14932179629d49fade0db78a3136d787}} 
+\index{interface.h@{interface.h}!mostrar\_tabuleiro\_final@{mostrar\_tabuleiro\_final}}
+\index{mostrar\_tabuleiro\_final@{mostrar\_tabuleiro\_final}!interface.h@{interface.h}}
+\doxysubsubsection{\texorpdfstring{mostrar\_tabuleiro\_final()}{mostrar\_tabuleiro\_final()}}
+{\footnotesize\ttfamily void mostrar\+\_\+tabuleiro\+\_\+final (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$}]{e }\end{DoxyParamCaption})}
+
+
+
+Imprime o tabuleiro sem o prompt. 
+
+
+\begin{DoxyParams}{Parâmetros}
+{\em e} & Estado atual do jogo. \\
+\hline
+\end{DoxyParams}
+
+
+Definido na linha 31 do ficheiro interface.\+c.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{31                                         \{}
+\DoxyCodeLine{32     \textcolor{keywordtype}{int} num = 8;}
+\DoxyCodeLine{33 }
+\DoxyCodeLine{34     \textcolor{comment}{//Imprime as letras no topo do tabuleiro.}}
+\DoxyCodeLine{35     printf(\textcolor{stringliteral}{"   "});}
+\DoxyCodeLine{36     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{char} c = \textcolor{charliteral}{'a'}; c < \textcolor{charliteral}{'i'}; c++)}
+\DoxyCodeLine{37         printf(\textcolor{stringliteral}{"\%c  "}, c);}
+\DoxyCodeLine{38     printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{39     \textcolor{comment}{/*}}
+\DoxyCodeLine{40 \textcolor{comment}{    Imprime o conteudo do tabuleiro, imprimindo '*' no caso de a Peça ser "BRANCA",}}
+\DoxyCodeLine{41 \textcolor{comment}{    '\#' no caso de a peça ser "PRETA", e '.' no caso de ser "VAZIO".}}
+\DoxyCodeLine{42 \textcolor{comment}{    */}}
+\DoxyCodeLine{43     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
+\DoxyCodeLine{44         printf(\textcolor{stringliteral}{"\%d  "}, num);}
+\DoxyCodeLine{45         num-\/-\/;}
+\DoxyCodeLine{46         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
+\DoxyCodeLine{47             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
+\DoxyCodeLine{48             printf(\textcolor{stringliteral}{"\%c  "}, peca);}
+\DoxyCodeLine{49         \}}
+\DoxyCodeLine{50         printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{51     \}}
+\DoxyCodeLine{52 \}}
+
+\end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_a8d63019a8176de612e33bf8c72121760}\label{interface_8h_a8d63019a8176de612e33bf8c72121760}} 
 \index{interface.h@{interface.h}!movs@{movs}}
 \index{movs@{movs}!interface.h@{interface.h}}
@@ -269,39 +326,39 @@ Função que mostra todas as jogadas efetuadas até ao momento em que o utilizad
 Coloca jogadas anteriores no ficheiro. \end{quote}
 
 
-Definido na linha 138 do ficheiro interface.\+c.
+Definido na linha 170 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{138                      \{}
-\DoxyCodeLine{139         \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{140         \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{142         \textcolor{keywordflow}{if} (jog == 2) \{}
-\DoxyCodeLine{143             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
-\DoxyCodeLine{144                 \textcolor{keywordflow}{if}(i < 9)}
-\DoxyCodeLine{145                     printf(\textcolor{stringliteral}{"0\%d: "},i+1);}
-\DoxyCodeLine{146                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{147                     printf(\textcolor{stringliteral}{"\%d: "},i+1);}
-\DoxyCodeLine{148                 \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
-\DoxyCodeLine{149                     printf(\textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{150                             \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{151                 \}}
-\DoxyCodeLine{152                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{153                     printf(\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
-\DoxyCodeLine{154                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{155             \}}
-\DoxyCodeLine{156         \}}
-\DoxyCodeLine{157         \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{158             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
-\DoxyCodeLine{159                 \textcolor{keywordflow}{if} (i < 10)}
-\DoxyCodeLine{160                     printf(\textcolor{stringliteral}{"0\%d: "}, i+1);}
-\DoxyCodeLine{161                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{162                     printf(\textcolor{stringliteral}{"\%d: "}, i+1);}
-\DoxyCodeLine{163                 printf( \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{164                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{165                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{166             \}}
-\DoxyCodeLine{167         \}}
-\DoxyCodeLine{168 \}}
+\DoxyCodeLine{170                      \{}
+\DoxyCodeLine{171         \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{172         \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{174         \textcolor{keywordflow}{if} (jog == 2) \{}
+\DoxyCodeLine{175             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
+\DoxyCodeLine{176                 \textcolor{keywordflow}{if}(i < 9)}
+\DoxyCodeLine{177                     printf(\textcolor{stringliteral}{"0\%d: "},i+1);}
+\DoxyCodeLine{178                 \textcolor{keywordflow}{else}}
+\DoxyCodeLine{179                     printf(\textcolor{stringliteral}{"\%d: "},i+1);}
+\DoxyCodeLine{180                 \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
+\DoxyCodeLine{181                     printf(\textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{182                             \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{183                 \}}
+\DoxyCodeLine{184                 \textcolor{keywordflow}{else}}
+\DoxyCodeLine{185                     printf(\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
+\DoxyCodeLine{186                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{187             \}}
+\DoxyCodeLine{188         \}}
+\DoxyCodeLine{189         \textcolor{keywordflow}{if} (jog == 1) \{}
+\DoxyCodeLine{190             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
+\DoxyCodeLine{191                 \textcolor{keywordflow}{if} (i < 10)}
+\DoxyCodeLine{192                     printf(\textcolor{stringliteral}{"0\%d: "}, i+1);}
+\DoxyCodeLine{193                 \textcolor{keywordflow}{else}}
+\DoxyCodeLine{194                     printf(\textcolor{stringliteral}{"\%d: "}, i+1);}
+\DoxyCodeLine{195                 printf( \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{196                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{197                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{198             \}}
+\DoxyCodeLine{199         \}}
+\DoxyCodeLine{200 \}}
 
 \end{DoxyCode}
